--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@types/wicg-file-system-access": "^2023.10.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "rollup": "^4.24.0",
