--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
-    "types": ["chrome", "node"],
+    "types": ["chrome", "node", "@types/wicg-file-system-access"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
