--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Prompt Repo - ChatGPT & Claude",
-  "version": "1.0.1",
-  "description": "Convert GitHub repos to AI chat prompts. Select files, feed content to ChatGPT and Claude.",
+  "version": "1.0.2",
+  "description": "Convert GitHub repos and local directories into AI chat prompts. Select files, feed content to ChatGPT and Claude.",
   "permissions": [],
   "background": {
     "service_worker": "src/background.ts",
