--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "^2.0.0-beta.26",
+    "@crxjs/vite-plugin": "2.0.0-beta.28",
     "@rollup/plugin-terser": "^0.4.4",
     "@types/chrome": "^0.0.237",
     "@types/node": "^22.5.5",
