--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Prompt Repo - ChatGPT & Claude",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "Convert GitHub repos and local directories into AI chat prompts. Select files, feed content to ChatGPT and Claude.",
   "permissions": [],
   "background": {
@@ -10,7 +10,11 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://chatgpt.com/*", "https://claude.ai/*"],
+      "matches": [
+        "https://chatgpt.com/*",
+        "https://claude.ai/*",
+        "https://aistudio.google.com/*"
+      ],
       "js": ["src/content-scripts/index.tsx"]
     }
   ],
