--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@types/chrome": "^0.0.237",
     "@types/node": "^22.5.5",
+    "@types/postcss-prefix-selector": "^1.16.3",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@types/wicg-file-system-access": "^2023.10.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
+    "postcss-prefix-selector": "^2.1.1",
     "rollup": "^4.24.0",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.0.2",
